--- a/visual.html
+++ b/visual.html
@@ -122,14 +122,14 @@
 				var moves = algorithm.split(' ');
 				_algorithmR(moves,ms);
 			}
-			function _algorithmR(moves, ms){
+			function _algorithmR(moves,ms){
 				ms = ms? ms: 300;
 				if(moves.length == 0) return;
-				var move = moves.shift()
-				setTimeout(function(){
-					rotate(move,ms);
-					_algorithmR(moves,ms);
-				},ms+50);
+				var move = moves.shift();
+				rotate(move,ms).then(
+					function(){
+						_algorithmR(moves,ms);
+					});
 			}
 			function rotate(move, ms){
 				var face, CCW;
@@ -137,58 +137,61 @@
 				face = move[0];
 				CCW = move[1];
 				if(!canRotate) return;
-				var center = rubik.getSocket(face);
-				var obj = center.piece.cubie;
-				obj.updateMatrixWorld();
-				//THREE.SceneUtils.attach( center.piece.cubie, center.piece.cubie.parent, obj );
-				center.sockets[0].forEach(function(socket, index){
-					// remove child from scene and add it to parent
-					THREE.SceneUtils.attach( socket.piece.cubie, socket.piece.cubie.parent, obj );
-				});
-
-				var rotation,target;
-				var axis;
-				var direction; //clockwise direction
-				switch(face){
-					case 'U': case 'D':
-						axis='y';
-						break;
-					case 'F': case 'B':
-						axis = 'z';
-						break;
-					case 'R': case 'L':
-						axis = 'x';
-						break;
-				}
-				switch(face){
-					case 'U': case 'R' : case 'F':
-						direction = -1;
-					break;
-					case 'D': case 'L' : case 'B':
-						direction = 1;
-					break;
-				}
-				rotation = { y : obj.rotation[axis] };
-				target = { y: obj.rotation[axis] + Math.toRadians(90)*(CCW? -direction:direction)};
-
-				var tween = new TWEEN.Tween(rotation).to(target, ms);
-				tween.onUpdate(function(){
-				    obj.rotation[axis] = rotation.y;
-				});
-
-				canRotate = false;
-				tween.onComplete(function(){
+				return new Promise(function(resolve, reject){
 					var center = rubik.getSocket(face);
 					var obj = center.piece.cubie;
 					obj.updateMatrixWorld();
+					//THREE.SceneUtils.attach( center.piece.cubie, center.piece.cubie.parent, obj );
 					center.sockets[0].forEach(function(socket, index){
-						// remove child from parent and add it to scene
-						THREE.SceneUtils.detach( socket.piece.cubie, obj, scene );
+						// remove child from scene and add it to parent
+						THREE.SceneUtils.attach( socket.piece.cubie, socket.piece.cubie.parent, obj );
 					});
-					rubik.rotate(move);
-				  canRotate = true;
+
+					var rotation,target;
+					var axis;
+					var direction; //clockwise direction
+					switch(face){
+						case 'U': case 'D':
+							axis='y';
+							break;
+						case 'F': case 'B':
+							axis = 'z';
+							break;
+						case 'R': case 'L':
+							axis = 'x';
+							break;
+					}
+					switch(face){
+						case 'U': case 'R' : case 'F':
+							direction = -1;
+						break;
+						case 'D': case 'L' : case 'B':
+							direction = 1;
+						break;
+					}
+					rotation = { y : obj.rotation[axis] };
+					target = { y: obj.rotation[axis] + Math.toRadians(90)*(CCW? -direction:direction)};
+
+					var tween = new TWEEN.Tween(rotation).to(target, ms);
+					tween.onUpdate(function(){
+					    obj.rotation[axis] = rotation.y;
+					});
+
+					canRotate = false;
+					tween.onComplete(function(){
+						var center = rubik.getSocket(face);
+						var obj = center.piece.cubie;
+						obj.updateMatrixWorld();
+						center.sockets[0].forEach(function(socket, index){
+							// remove child from parent and add it to scene
+							THREE.SceneUtils.detach( socket.piece.cubie, obj, scene );
+						});
+						rubik.rotate(move);
+					  canRotate = true;
+						resolve();
+					});
+					tween.start();
 				});
-				tween.start();
 			}
 
 			function onWindowResize() {
