--- a/index.html
+++ b/index.html
@@ -20,36 +20,40 @@
   <body>
     <div class ="UI">
       <button type="button" class='red'
-        onclick="rubik.rotate('F');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('F');">CW</button>
       <button type="button" class='red'
-        onclick="rubik.rotate('F*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('F*');">CCW</button>
       <button type="button" class='orange'
-        onclick="rubik.rotate('B');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('B');">CW</button>
       <button type="button" class='orange'
-        onclick="rubik.rotate('B*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('B*');">CCW</button>
       <button type="button" class='blue'
-        onclick="rubik.rotate('R');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('R');">CW</button>
       <button type="button" class='blue'
-        onclick="rubik.rotate('R*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('R*');">CCW</button>
       <button type="button" class='green'
-        onclick="rubik.rotate('L');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('L');">CW</button>
       <button type="button" class='green'
-        onclick="rubik.rotate('L*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('L*');">CCW</button>
       <button type="button" class='white'
-        onclick="rubik.rotate('U');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('U');">CW</button>
       <button type="button" class='white'
-        onclick="rubik.rotate('U*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('U*');">CCW</button>
       <button type="button" class='yellow'
-        onclick="rubik.rotate('D');rubik.updateRenderer()">CW</button>
+        onclick="rubikView.rotate('D');">CW</button>
       <button type="button" class='yellow'
-        onclick="rubik.rotate('D*');rubik.updateRenderer()">CCW</button>
+        onclick="rubikView.rotate('D*');">CCW</button>
       <button type="button"
         onclick="scramble()">Scramble</button>
       <button type="button"
         onclick="restore()">Restore</button>
     </div>
     <script src="js/three.js"></script>
+    <script src="js/Tween.min.js"></script>
     <script src="js/TrackballControls.js"></script>
+    <script src="js/loaders/DDSLoader.js"></script>
+		<script src="js/loaders/MTLLoader.js"></script>
+		<script src="js/loaders/OBJLoader.js"></script>
     <script src="js/cube-sim/init.js"></script>
     <script src="js/cube-sim/piece.js"></script>
     <script src="js/cube-sim/socket.js"></script>
@@ -58,6 +62,8 @@
     <script src="js/cube-sim/edge.js"></script>
     <script src="js/cube-sim/coloredCube.js"></script>
     <script src="js/cube-sim/cube333.js"></script>
+    <script src="js/cube-sim/cube333Visual.js"></script>
+
     <script>
       //scene setup
       var scene = new THREE.Scene();
@@ -65,8 +71,10 @@
 
       var renderer = new THREE.WebGLRenderer();
       renderer.setSize( window.innerWidth, window.innerHeight );
+      renderer.setClearColor('#282c34');
       document.body.appendChild( renderer.domElement );
-
+      window.addEventListener( 'resize', onWindowResize, false );
+      
       // Controls
       controls = new THREE.TrackballControls( camera );
       controls.rotateSpeed = 2.5;
@@ -77,26 +85,19 @@
       controls.keys = [ 65, 83, 68 ];
 
       //add light
-      var directionalLight = new THREE.DirectionalLight( 0xffffff, 1 );
-      directionalLight.position.set( 2, 1, 2 );
-      scene.add( directionalLight );
-      var directionalLight2 = new THREE.DirectionalLight( 0xffffff, 1 );
-      directionalLight2.position.set( -3, -1, 2 );
-      scene.add( directionalLight2 );
+      var ambient = new THREE.AmbientLight( 0x444444 );
+      scene.add( ambient );
 
-      var directionalLight = new THREE.DirectionalLight( 0xffffff, .5 );
-      directionalLight.position.set( 2, 1, -2 );
-      scene.add( directionalLight );
-      var directionalLight2 = new THREE.DirectionalLight( 0xffffff, .5 );
-      directionalLight2.position.set( -3, -1, -2 );
-      scene.add( directionalLight2 );
+      var light = new THREE.PointLight( 0xffeedd );
+      light.position.set( 0, 1, -1 ).normalize();
+      light.power = 25;
+      camera.add( light );
+      scene.add(camera);
 
       camera.position.z = 5;
       //Draw cube
       var rubik = new CUBES.Cube333();
-      rubik.initRenderer();
-      scene.add(rubik.object3D);
-      rubik.updateRenderer()
+      var rubikView = new CUBES.Cube333.View(rubik,scene);
 
       //Drawing loop
 
@@ -104,33 +105,43 @@
 
       function animate() {
         requestAnimationFrame( animate );
-        renderer.render( scene, camera );
+        render();
         controls.update();
       }
 
       function render() {
+        TWEEN.update();
         renderer.render( scene, camera );
       }
       //Button controls for now
       function restore(){
         scene.remove(rubik.object3D);
+        scene.remove(rubikView.object3D);
         rubik = new CUBES.Cube333();
+        rubikView = new CUBES.Cube333.View(rubik,scene);
         rubik.initRenderer();
-        scene.add(rubik.object3D);
       }
       var moves =['U','D','L','R','F','B'];
       function scramble(){
+        var algorithm = '';
         for (var i = 0; i < 30; i++) {
-          var index = getRandomIntInclusive(0,moves.length-1);
-          rubik.rotate(moves[index]);
+          var index = Math.getRandomIntInclusive(0,moves.length-1);
+          algorithm+=moves[index] + ' ';
         }
-        rubik.updateRenderer();
+        algorithm = algorithm.slice(0, -1); //remove last space
+        rubikView.algorithm(algorithm, 30);
       }
-      function getRandomIntInclusive(min, max) {
-        min = Math.ceil(min);
-        max = Math.floor(max);
-        return Math.floor(Math.random() * (max - min + 1)) + min;
-      }
+      function onWindowResize() {
+
+				windowHalfX = window.innerWidth / 2;
+				windowHalfY = window.innerHeight / 2;
+
+				camera.aspect = window.innerWidth / window.innerHeight;
+				camera.updateProjectionMatrix();
+
+				renderer.setSize( window.innerWidth, window.innerHeight );
+
+			}
     </script>
   </body>
 </html>
