Use new orientation object

--- a/cube333.html
+++ b/cube333.html
@@ -28,6 +28,7 @@
 		<script src="node_modules/tween.js/src/Tween.js"></script>
 
 		<script src="js/cube-sim/init.js"></script>
+		<script src="js/cube-sim/Orientation.js"></script>
     <script src="js/cube-sim/piece.js"></script>
     <script src="js/cube-sim/socket.js"></script>
     <script src="js/cube-sim/center.js"></script>
